--- a/README.mv
+++ b/README.mv
@@ -1,7 +1,7 @@
-This is a project made for my college class. It involves building a dashboard for better visualization of the data gathered.
+Semester's final project. It involves the development of a dashboard for better visualization of the data gathered.
 The data, in "csv" format, was extracted from the following gov website: "https://www.infosiga.sp.gov.br/mapas/"
-Our main objective was to point out the main areas of risk inside of the city perimeters of "SP-Marília" with more detail.
+Our main objective was to point out the main areas of risk inside of the city perimeters of "SP-Marília", showing more detail on the board.
 
-Link of the dashboard: https://dashboardareaderisco-mariliasp.streamlit.app/
-Link of our solution: https://stv0-afk.github.io/TrabRafa/
-(The solution aimed for a local tech company called "DSIN")
+Dashboard: https://dashboardareaderisco-mariliasp.streamlit.app/
+Solution: https://stv0-afk.github.io/TrabRafa/
+(The solution aimed for a local tech company, "DSIN")
